
2007-09-16 v0.21 Tels 956 tests
  * require Math::BigInt v1.88
  * fix as_number() with Nan/inf (thanx zefram!)
  * add POD stub for objectify() to make pod_cov.t happy

2007-06-30 v0.20 Tels 956 tests
  * require Math::BigInt v1.87
  * add bnok() and bexp()

2007-04-17 v0.19 Tels 934 tests
  * fix the check in bnorm() as it breaks under Pari
  * require Math::BigInt v1.83
  * exponent() makes a copy, so we can skip copy()
  * fix the licence back to be "perl"

2007-04-09 v0.18 Tels 934 tests
  * install_as_core() to work around Module::Install bug
  * remove PREREQ_FATAL since the toolchain is broken
  * require Math::BigInt v1.82

2007-02-03 v0.17 Tels 934 tests
  * include the spelling fixes for bleadperl
  * more typo and POD fixes
  * include from_bin(), from_hex() and from_oct()
  * add tests for octal and from_hex()/from_bin()
  * bundle and use Module::Install

Older revision history:

2001-11-21 v0.01 Tels
 * first release
2002-02-24 v0.02 Tels (late night)
 * ripped out doc and replaced by something closer to the truth
 * subclass of BigFloat w/ overload section
 * uses d/n instead of x/y for denominator and nominator
 * tests from Math::BigFloat with a test subclass warping the input/output
 * added preliminary bmul(), badd(), bdiv() methods
 * added binf(), bone(), bzero() and bnan()
 * added _bzero(), _bone(), _bnan() and _binf() (bnan() etc inherited)
 * dummy blog(), bceil(), floor(), bfac() and bpow() functions
 * parse input as '0.1', '0.1/0.1', '1/10', '10' or '10/0.1'
 * input as Math::BigInts or Math::BigFloats is okay
2002-02-25 v0.03 Tels (early morning hours)
 * fixed bstr()/bsstr() for negative output and inf/NaN
 * _d/_n were accidentily swapped
 * added numerator()/denominator()/parts() and doc and tests
 * fixed is_one()
 * '1/ ' is as invalid as '1/'
 * badd/bsub/bmul: inf/NaN handling was wrong due to copy&paste (ha!) from bdiv
 * more extensive testsuite (about 400 tests)
 * bnorm() normalizes 0/x to 0/1