@@ -1,4 +1,11 @@
 
+2008-04-06 v0.22 Tels 973 tests
+  * fix bug ##34584: hang when calling exp (Thanx Steve Wills!)
+    + broot() normalizes result
+    + bexp() works for values like '1/2' (sqrt), '1/4' (broot), etc.
+    + broot() works for values like '2/3'
+  * added as_float() - return the BigRat as rounded Math::BigFloat
+
 2007-09-16 v0.21 Tels 956 tests
   * require Math::BigInt v1.88
   * fix as_number() with Nan/inf (thanx zefram!)
